--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?pjb7vs");
-  src: url("../fonts/icomoon.eot?pjb7vs#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?pjb7vs") format("truetype"), url("../fonts/icomoon.woff?pjb7vs") format("woff"), url("../fonts/icomoon.svg?pjb7vs#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?r3o3sa");
+  src: url("../fonts/icomoon.eot?r3o3sa#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?r3o3sa") format("truetype"), url("../fonts/icomoon.woff?r3o3sa") format("woff"), url("../fonts/icomoon.svg?r3o3sa#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -18,6 +18,9 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
+.icon-x:before {
+  content: "\e905"; }
 
 .icon-magnifying-glass:before {
   content: "\e900"; }
